--- a/encrytify/index.html
+++ b/encrytify/index.html
@@ -25,8 +25,8 @@
             <button>Home</button>
             <button onclick="window.location.href='enc_desc.php'">Encryption</button>
             <button onclick="window.location.href='desc.php'">Decryption</button>
-            <button>How it Works</button>
-            <button>Contact</button>
+            <button onclick="window.location.href='data_store.php'">Data Store</button>
+            <button onclick="window.location.href='#credits'">Contact</button>
             </div>
         </div>
         <div class="login-btn">
@@ -47,9 +47,6 @@
                 margin-left: auto;
                 line-height: unset;" onclick="window.location.href='enc_desc.php'">
                     <strong>Get Started</strong>
-                </button>
-                <button>
-                    <strong>Learn More →</strong>
                 </button>
             </div>
         </div>
@@ -88,22 +85,22 @@
             </div>
         </div>
         <div id="Phase-1" class="Phase">
-            <H2 style="margin: 0%;">Wondering How are we Encrypting / Decrypting your data? </H2> <br>
-            <p style="margin: 0%;">Why not head over to "How it Works" for a detailed explanation on each 
-                and every ecryption types used and how they work for full transperency</p> <br>
+            <H2 style="margin: 0%;">Ever wanted to store you data from a public computer?</H2> <br>
+            <p style="margin: 0%;">We got just the solution for you. Head over to our data store 
+                where we allow users to store there data without any logins.</p> <br>
             <div id="Phase-1-btn">
                 <button id="register-btn" style="
                 margin-left: auto;
-                line-height: unset;">
-                    <strong>How It Works</strong>
+                line-height: unset;" onclick="window.location.href='data_store.php'">
+                    <strong>Data Store</strong>
                 </button>
             </div>
-    </div>
+        </div>
     <hr>
     <div id="footer">
         <p id="end-head">ENCRYPTIFY</p>
         <div id="credits">
-            <p>Made By MasterANK(Ankit Aggarwal)</p> <br>
+            <p>Made By: <br> MasterANK(Ankit Aggarwal) <br> Jatin Garg</p> <br>
             <div>
                 <a href="https://github.com/MasterANK" target=”_blank”><img class="social-media" src="https://i.gyazo.com/85e7ce9196ae635161fec921602903a7.png"></a>
                 <a href="https://www.instagram.com/masterank15/" target=”_blank”><img class="social-media" src="https://freelogopng.com/images/all_img/1683193139instagram-icon-png-white.png"></a>
